--- a/changes.txt
+++ b/changes.txt
@@ -7,3 +7,7 @@
 
 0.5 
 -Diagonal movement removed(hirap)
+
+0.6
+-Improved border collision
+-Game now waits for character to center before moving map when coming from border
