Refactor map and player system, add tile assets
Reorganized file structure and moved assets to new directories. Introduced a new tile system, added object collisions, and restructured the map system to use for loops for drawing tiles instead of text grid files. Removed old grid files and the Tiles class, added PlayerStatus for player sprite management, and updated GamePanel and KeyHandler to support the new architecture. Added new tile and border sprite assets.

--- a/changes.txt
+++ b/changes.txt
@@ -11,3 +11,14 @@
 0.6
 -Improved border collision
 -Game now waits for character to center before moving map when coming from border
+
+0.7
+-Reorganized files directory
+-Added tile system
+-Added object collisions
+-Restuctured map system
+
+0.8
+-Removed txt file grid system
+-Replaced with for loops for drawing map tiles
+-Small reorganization of files and sprites
